--- a/apps/js-machine-front/src/app/scenes/about/styles/tileElement.css
+++ b/apps/js-machine-front/src/app/scenes/about/styles/tileElement.css
@@ -1,7 +1,7 @@
 .tile-element {    
     text-align: left;
     width: 33%;
-    padding: 0 50px 25px;
+    padding: 0 50px;
     box-sizing: border-box;
 }
 
