--- a/apps/js-machine-front/src/app/scenes/about/styles/tileElementMedia.css
+++ b/apps/js-machine-front/src/app/scenes/about/styles/tileElementMedia.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 950px){
     .tile-element {
-        padding: 0 30px 25px;
+        padding: 0 30px;
     }
 }
 
